SFDC Automation/src/objects/Pipeline_Detail_Preload__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contr_From_NationalSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contr From NationalSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <label>EVA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Key_WO_Splits__c</fullName>
        <label>Group Key WO Splits</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles__c</fullName>
        <label>Number of Vehicles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Split__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Split</label>
        <referenceTo>Opportunity_Split__c</referenceTo>
        <relationshipLabel>Pipeline Detail Preloads</relationshipLabel>
        <relationshipName>Pipeline_Detail_Preloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pipeline Detail Preloads</relationshipLabel>
        <relationshipName>Pipeline_Detail_Preloads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParentAccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is stores the owner of the Parent Account of the account with which the opportunity is associated with.</description>
        <label>ParentAccountOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Detail_Preloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <label>Product Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line_number__c</fullName>
        <label>Product Line number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Sheet</label>
        <referenceTo>Rate_Sheet__c</referenceTo>
        <relationshipLabel>Pipeline Detail Preloads</relationshipLabel>
        <relationshipName>Pipeline_Detail_Preloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Amount__c</fullName>
        <label>Report Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_On_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report On User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Detail_Preloads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Amount__c</fullName>
        <label>Split Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_percentage__c</fullName>
        <label>Split percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Vehicle__c</fullName>
        <label>Total Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>New/Add Business</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Change</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Term Extension</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Walk Continuation</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee Re-Assignment</fullName>
                <color>#990000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Drop Services</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>Add Insurance Only</fullName>
                <color>#000099</color>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion to Contract Change</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion to Term Extension</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Add</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Increase</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer</fullName>
                <color>#003333</color>
            </picklistValues>
            <picklistValues>
                <fullName>New Location</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <color>#663300</color>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Change</fullName>
                <color>#EFAE73</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split person name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Detail_Preloads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>extref_Pipeline_Detail_Id__c</fullName>
        <externalId>true</externalId>
        <label>extref Pipeline Detail Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Pipeline Detail Preload</label>
    <nameField>
        <label>Pipeline Detail Preload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Detail Preloads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>